--- a/AUTHORS
+++ b/AUTHORS
@@ -16,12 +16,12 @@ Contributors:
     Peter Suschlik - backwards searching
     (salinasv) - move some variables to heap
     Sylvester Johansson (scj) - form filler script & different take on link follower
-    (mxf) - uzblcat
+    (mxf) - reuzblcat
     Mark Nevill - misc patches
     Uli Schlachter (psychon) - basic mime_policy_cb & Makefile patch
     James S Wheaton (uranther) - zoom level, test framework
     (bobpaul) - session script patches
-    Tom Adams (holizz) - few patches, cookies.py, gtkplug/socket & proof of concept uzbl_tabbed.py, scheme_handler
+    Tom Adams (holizz) - few patches, cookies.py, gtkplug/socket & proof of concept reuzbl_tabbed.py, scheme_handler
     neutralinsomniac - load_progress = 0 fix
     Maximilian Gaß (mxey) - several small patches
     Abel Camarillo (00z) - various portability fixes, such as BSD fixes for Makefile and posix shell scripts
@@ -29,10 +29,10 @@ Contributors:
     (kmeaw) - fix for multibyte utf8 characters segfault
     (evocallaghan) - tiny patches
     Aaron Griffin (phrakture) - Makefile patches to build on OSX
-    Mason Larobina - os.environ.keys() & os.path.join fix in cookies.py, work on uzbl_tabbed.py, cookies_daemon.py
-    (dequis) - Uzbl.run, birectional socket, javascript commands
+    Mason Larobina - os.environ.keys() & os.path.join fix in cookies.py, work on reuzbl_tabbed.py, cookies_daemon.py
+    (dequis) - reUzbl.run, birectional socket, javascript commands
     Brendan Taylor (bct) - various bugfixes, making misc variables much better using expand(), refactoring some internal var stuff
-    Chris van Dijk (quigybo) - work on uzbl_tabbed.py
+    Chris van Dijk (quigybo) - work on reuzbl_tabbed.py
     Moritz Lenz - small doc fix
     Sergey Shepelev (temoto) - doc patch
     Tassilo Horn (tsdh) - $VISUAL patch
