--- a/README
+++ b/README
@@ -5,14 +5,14 @@
 * people who like nothing from this list: mpd, moc, wmii, dwm, awesome, mutt, pine, vim, dmenu, screen, irssi, weechat, bitlbee
 
 ### TO NEW PEOPLE:
-* invoke uzbl --help
-* to get you started: `XDG_DATA_HOME=/usr/share/uzbl/examples/data XDG_CONFIG_HOME=/usr/share/uzbl/examples/config uzbl --uri www.archlinux.org`
+* invoke reuzbl --help
+* to get you started: `XDG_DATA_HOME=/usr/share/reuzbl/examples/data XDG_CONFIG_HOME=/usr/share/reuzbl/examples/config reuzbl --uri www.archlinux.org`
 * alternatively, copy the above data to your real `$XDG_DATA_HOME` and `$XDG_CONFIG_HOME` directories
 * try and study the sample config, read the readme to find out how it works.
-* You can change the url with commands (if you have setup the appropriate keybinds) but to be most effective it's better to do url editing/changing _outside_ of uzbl.
+* You can change the url with commands (if you have setup the appropriate keybinds) but to be most effective it's better to do url editing/changing _outside_ of reuzbl.
   Eg, you can use the `load_from_*` dmenu based scripts to pick/edit a url or type a new one.
 * If you have questions, you are likely to find answers in the FAQ or in the other documentation.
-* documentation is in /usr/share/uzbl/docs
+* documentation is in /usr/share/reuzbl/docs
 
 
 ### INTRODUCTION
@@ -26,10 +26,10 @@ Time to change that!
 
   Here are the general ideas (not all of these are implemented perfectly yet):
 
-* each instance of uzbl renders 1 page (eg it's a small wrapper around webkit), no tabbing, tab previews, or speed dial things.
+* each instance of reuzbl renders 1 page (eg it's a small wrapper around webkit), no tabbing, tab previews, or speed dial things.
   For "multiple instances management" use your window managers, scripts or wrappers.
 * very simple, plaintext , changeable at runtime configuration
-* various interfaces for (programmatic) interaction with uzbl (see below)
+* various interfaces for (programmatic) interaction with reuzbl (see below)
 * customizable keyboard shortcuts in vim or emacs style (whatever user wants)
 * "outsource" logic that is not browsing to external scripts under the users control:
     - managing bookmarks
@@ -53,14 +53,14 @@ Time to change that!
 
 
 ### CONFIGURATION / CONTROL:
-The general idea is that uzbl by default is very bare bones.  you can send it commands to update settings and perform actions, through various interfaces.
+The general idea is that reuzbl by default is very bare bones.  you can send it commands to update settings and perform actions, through various interfaces.
 There is a limited default configuration.  Please see config.h to see what it contains.
 By default, there are *no* keybinds defined at all.  (Default keybinds would work counterproductive when you try to customize)
-For examples of the possibilities what you can do, please see the sample config(s), and uzbl wiki page.
-There are several interfaces to interact with uzbl:
+For examples of the possibilities what you can do, please see the sample config(s), and reuzbl wiki page.
+There are several interfaces to interact with reuzbl:
 
-* uzbl --config <filename>: <filename> will be read line by line, and the commands in it will be executed.  useful to configure uzbl at startup.
-  If you have a file in `$XDG_CONFIG_HOME/uzbl/config` (this expands to ~/.config/uzbl/config on most systems) it will be automatically recognized
+* reuzbl --config <filename>: <filename> will be read line by line, and the commands in it will be executed.  useful to configure reuzbl at startup.
+  If you have a file in `$XDG_CONFIG_HOME/reuzbl/config` (this expands to ~/.config/reuzbl/config on most systems) it will be automatically recognized
 * stdin: to write commands into stdin, use `--config -` (or `-c -`)
 * interactive: you can enter commands (and bind them to shortcuts, even at runtime)
   By default, the behaviour is modal (vi style):
@@ -72,17 +72,17 @@ There are several interfaces to interact with uzbl:
   Also, copy paste works when typing commands:
   * insert (paste X cliboard)
   * shift insert (paste primary selection buffer)
-* FIFO & socket file: if enabled by setting their paths through one of the above means, you can have socket and fifo files available which are very useful to programatically control uzbl (from scripts etc).
-  The advantage of the fifo is you can write plaintxt commands to it, but it's half duplex only (uzbl cannot send a response to you).
+* FIFO & socket file: if enabled by setting their paths through one of the above means, you can have socket and fifo files available which are very useful to programatically control reuzbl (from scripts etc).
+  The advantage of the fifo is you can write plaintxt commands to it, but it's half duplex only (reuzbl cannot send a response to you).
   The socket is full duplex but you need a socket-compatible wrapper such as socat to work with it.
   For example: echo <command> | socat - unix-connect:<socketfile>
 
-When uzbl forks a new instance (eg "open in new window") it will use the same commandline arguments (eg the same --config <file>), except --uri and--name.
+When reuzbl forks a new instance (eg "open in new window") it will use the same commandline arguments (eg the same --config <file>), except --uri and--name.
 If you made changes to the configuration at runtime, these are not pased on to the child.
 
 ### COMMAND SYNTAX
-Uzbl will read commands via standard input, named fifo pipe (if `fifo_dir` is set) and IPC socket (when `socket_dir` is set).
-For convenience, uzbl can also be instructed to read commands from a file on startup by using the `-c` option.  Indeed, the config file is nothing more than a list of commands.
+reUzbl will read commands via standard input, named fifo pipe (if `fifo_dir` is set) and IPC socket (when `socket_dir` is set).
+For convenience, reuzbl can also be instructed to read commands from a file on startup by using the `-c` option.  Indeed, the config file is nothing more than a list of commands.
 
 Each command starts with the name of the command, which must be the first thing on a line; preceding whitespace is not allowed.
 A command is terminated by a newline.  Empty lines and lines that start with the hash sign are ignored by the parser.  Command names are always written in lowercase.
@@ -91,19 +91,19 @@ The following commands are recognized:
 
 * `set <key> = <value>`
    - used for changing variables on the fly
-   - the changes are effective immediately; for example, setting the variable `uri` will make uzbl start loading, and changing `status_format` will make the status bar react immediately
+   - the changes are effective immediately; for example, setting the variable `uri` will make reuzbl start loading, and changing `status_format` will make the status bar react immediately
    - if you want to unset a string, use `set` with one space after the equals sign
 * `print @<key>`
    - use this to print the value of a variable.
 * `bind <string> = <command>`
-   - sets the character sequence `<string>` to invoke `<command>` when typed interactively in uzbl
+   - sets the character sequence `<string>` to invoke `<command>` when typed interactively in reuzbl
    - there are a few tricks you can do:
        * `<string>` ends with an underscore: the command will only be invoked after pressing return/enter. If the user enters text where `<string>` has the underscore, `%s` in the `<command>` string will be replaced by this text. (optional)
        * `<string>` ends with an asterisk: similar behavior as with an underscore, but also makes the binding incremental (i.e. the command will be invoked on every keystroke).
        * `<string>` ends on a different character: you need to type the full string, which will trigger the command immediately, without pressing enter/return.
    - examples:
        * `bind o _ = uri %s`
-         - uzbl will load the url when you type: 'o <url><enter>'
+         - reuzbl will load the url when you type: 'o <url><enter>'
        * `bind /*  = search %s`
          - a search command which is called on every character typed after the slash, letting you see the search narrow down while typing.
          - Hitting return, enter or esc will terminate the search.
@@ -139,10 +139,10 @@ The following commands are recognized:
    - note that the arguments as specified in "EXTERNAL SCRIPTS" are appended at the end, so the argument numbers will be higher.
 * `sync_spawn <executable> <additional args>`
 * `sync_sh <command>`
-   - these are synchronous variants of `spawn` and `sh`, which means uzbl will wait for them to return
+   - these are synchronous variants of `spawn` and `sh`, which means reuzbl will wait for them to return
    - you should only need to use these manually if you want to use a chain command in a handler that wants output from the command it runs
 * `talk_to_socket <socketfile> <tokens/command>`
-   - lets uzbl talk to a socketfile
+   - lets reuzbl talk to a socketfile
 * `exit`
 * `search <string>`
 * `search_reverse <string>`
@@ -150,7 +150,7 @@ The following commands are recognized:
 * `toggle_insert_mode <optional state>`
    - if the optional state is 0, disable insert mode. If 1, enable insert mode.
 * `dump_config`
-   - dumps your current config (which may have been changed at runtime) to stdout, in a format you can use to pipe into uzbl again (or use as config file)
+   - dumps your current config (which may have been changed at runtime) to stdout, in a format you can use to pipe into reuzbl again (or use as config file)
 * `keycmd <string>`
 * `keycmd_nl <string>`
    - keycmd sets the interactive command buffer to `<string>`.  If the given string is a valid binding, it will execute.  `Keycmd_nl` is like `keycmd`, but it also emulates a press of return, causing bindings with a parameter to execute.  For example, `keycmd_nl o google.com` would load the said url if you have a binding like `bind o _ = uri %s`.
@@ -159,12 +159,12 @@ The following commands are recognized:
 * `chain <command> <command> ..`
    - use for chaining multiple commands
    - remember to quote the commands; one command must come as one parameter
-   - if you use `chain` with a handler script which must return some output (such as a cookie handler -- uzbl will wait for and use its output), use sync_spawn or sync_sh instead of spawn or sh in the command that should give the output
+   - if you use `chain` with a handler script which must return some output (such as a cookie handler -- reuzbl will wait for and use its output), use sync_spawn or sync_sh instead of spawn or sh in the command that should give the output
 * `update_gui`
    - update the contents of the status and title bars
 
 ### VARIABLES AND CONSTANTS
-Uzbl has a lot of internal variables and constants.  You can get the values (using the `print` command, see above), and for variables you can also change the value at
+reUzbl has a lot of internal variables and constants.  You can get the values (using the `print` command, see above), and for variables you can also change the value at
 runtime.  Some of the values can be passed at start up through commandline arguments, others need to be set by using commands (eg in config file). 
 Some of them have default values (see config.h)
 Some variables have callback functions which will get called after setting the variable to perform some additional logic (see below)
@@ -232,22 +232,22 @@ Besides the builtin variables you can also define your own ones and use them in 
   - WEBKIT_MAJOR: set at compile time
   - WEBKIT_MINOR: set at compile time
   - WEBKIT_MICRO: set at compile time
-  - ARCH_UZBL: set at compile time
+  - ARCH_REUZBL: set at compile time
   - COMMIT: set at compile time
   - LOAD_PROGRESS
   - LOAD_PROGRESSBAR
   - TITLE
   - SELECTED_URI
   - MODE
-  - NAME: name of the uzbl instance (Xorg window id or pid when embed, unless set by cmdline arg) (TODO: can't we make this a variable?)
+  - NAME: name of the reuzbl instance (Xorg window id or pid when embed, unless set by cmdline arg) (TODO: can't we make this a variable?)
 
 
 ### VARIABLE EXPANSION AND COMMAND/JAVA SCRIPT SUBSTITUTION
 
 Variable expansion works pretty much as known from shell interpreters (sh, bash, etc.). This means you can
-construct strings with uzbl variables in them and have uzbl replace the variable name with its contents.
+construct strings with reuzbl variables in them and have reuzbl replace the variable name with its contents.
 
-In order to let uzbl know what to expand you'll need to prepend @ to the variable name:
+In order to let reuzbl know what to expand you'll need to prepend @ to the variable name:
 
     print The variable \@show_status contains @show_status
 
@@ -259,18 +259,18 @@ The above example demonstrates two things:
 
     * prepending the variable with '@' will expand to its contents
 
-    * like in the shell you can use @{uzbl_var} to denote the beginning/end of the variable name in
+    * like in the shell you can use @{reuzbl_var} to denote the beginning/end of the variable name in
       cases where it is not obvious what belongs to the name and what not.
       E.g.:  print @{show_status}foobar
 
 
 Command substitution will launch any commands and substitute the call with the return value of the command.
 
-Uzbl will substitute any commands enclosed within @(  )@:
+reUzbl will substitute any commands enclosed within @(  )@:
 
     print Command substitution: @(uname -a)@
 
-You can access any uzbl variable from within a command substitution:
+You can access any reuzbl variable from within a command substitution:
 
     print @(echo -n 'Accessing the show_status var from an external script, value: @show_status')@
 
@@ -328,21 +328,21 @@ status bar's markup; see the example config for examples.
 
 
 ### EXTERNAL SCRIPTS
-You can use external scripts with uzbl the following ways:
+You can use external scripts with reuzbl the following ways:
 
-* let uzbl call them. these scripts are called handlers in the uzbl config. used for handling logging history, handling a new download,..
-* call them yourself from inside uzbl.  you can bind keys for this. examples: add new bookmark, load new url,..
-* You could also use xbindkeys or your WM config to trigger scripts if uzbl does not have focus
+* let reuzbl call them. these scripts are called handlers in the reuzbl config. used for handling logging history, handling a new download,..
+* call them yourself from inside reuzbl.  you can bind keys for this. examples: add new bookmark, load new url,..
+* You could also use xbindkeys or your WM config to trigger scripts if reuzbl does not have focus
 
 Have a look at the sample configs and scripts!
 
-Handler scripts that are called by uzbl are passed the following arguments:
+Handler scripts that are called by reuzbl are passed the following arguments:
 
-    $1 uzbl-config-file
-    $2 uzbl-pid
-    $3 uzbl-x-window-id
-    $4 uzbl_fifo-filename
-    $5 uzbl_socket-filename
+    $1 reuzbl-config-file
+    $2 reuzbl-pid
+    $3 reuzbl-x-window-id
+    $4 reuzbl_fifo-filename
+    $5 reuzbl_socket-filename
     $6 current page url
     $7 current page title
     .. [ script specific ] (optional)
@@ -378,40 +378,40 @@ Handlers are called when a event of the same name occures. Currently these event
 
 ### JAVASCRIPT HELPER OBJECT
 
-Javascript code run from uzbl is given a special object in the global namespace which gives special privileges to these scripts. This object is called `Uzbl`, and it is added and removed before and after the script execution so that it is hidden to web javascripts (There is no race condition, since all the javascript code runs in a single thread)
+Javascript code run from reuzbl is given a special object in the global namespace which gives special privileges to these scripts. This object is called `reUzbl`, and it is added and removed before and after the script execution so that it is hidden to web javascripts (There is no race condition, since all the javascript code runs in a single thread)
 
-Currently, the `Uzbl` object provides only one function:
+Currently, the `reUzbl` object provides only one function:
 
-* `Uzbl.run( <command> )`
-   - command is any uzbl command as defined above
+* `reUzbl.run( <command> )`
+   - command is any reuzbl command as defined above
    - return value: a string, either empty or containing the output of the command. Very few commands return their output currently, including js, script, and print.
    - Examples:
-       * `Uzbl.run("spawn insert_bookmark.sh")`
-       * `uri = Uzbl.run("print @uri")` (see variable expansion below)
+       * `reUzbl.run("spawn insert_bookmark.sh")`
+       * `uri = reUzbl.run("print @uri")` (see variable expansion below)
 
 ### JAVASCRIPT SECURITY
 
 Since defined variables and functions are set in the global namespace (`window` object) as default, it is recommended to wrap your scripts like this:
 
-    (function(Uzbl) {
+    (function(reUzbl) {
         ...
-    })(Uzbl);
+    })(reUzbl);
 
-This way, everything is kept private. It also turns Uzbl into a local variable, which can be accessed from callback functions defined inside. However for some situations, isolating everything isn't an option, for example, with binds. You can define them directly in the script body, and use `var Uzbl = window.Uzbl;` to make the Uzbl variable local, as in the following example:
+This way, everything is kept private. It also turns reUzbl into a local variable, which can be accessed from callback functions defined inside. However for some situations, isolating everything isn't an option, for example, with binds. You can define them directly in the script body, and use `var reUzbl = window.reUzbl;` to make the reUzbl variable local, as in the following example:
 
     function f() {
-        var Uzbl = window.Uzbl;
-        Uzbl.run(...);
+        var reUzbl = window.reUzbl;
+        reUzbl.run(...);
         setTimeout(function() {
-            Uzbl.run(...);
+            reUzbl.run(...);
         }, 500);
     }
 
-Copying the Uzbl object and creating public functions should be taken with care to avoid creating security holes. Keep in mind that the "f" function above would be defined in the `window` object, and as such any javascript in the current page can call it.
+Copying the reUzbl object and creating public functions should be taken with care to avoid creating security holes. Keep in mind that the "f" function above would be defined in the `window` object, and as such any javascript in the current page can call it.
 
 ### COMMAND LINE ARGUMENTS
-    uzbl [ uri ]
-    -u, --uri=URI            Uri to load at startup (equivalent to 'uzbl <uri>' or 'set uri = URI' after uzbl has launched)
+    reuzbl [ uri ]
+    -u, --uri=URI            Uri to load at startup (equivalent to 'reuzbl <uri>' or 'set uri = URI' after reuzbl has launched)
     -v, --verbose            Whether to print all messages or just errors.
     -n, --name=NAME          Name of the current instance (defaults to Xorg window id or pid when embed)
     -c, --config=FILE        Path to config file or '-' for stdin
@@ -425,4 +425,4 @@ Copying the Uzbl object and creating public functions should be taken with care 
 
 
 ### BUGS
-Please report new issues @ uzbl.org/bugs
+Please report new issues @ reuzbl.org/bugs
