--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -6,22 +6,22 @@ You can find a [PKGBUILD](http://aur.archlinux.org/packages.php?ID=25972) on the
 from the master branch. You can edit the PKGBUILD to change to any other
 branch you want.
 
-For other distros, see [uzbl.org/wiki/howtos](http://www.uzbl.org/wiki/howtos)
+For other distros, see [reuzbl.org/wiki/howtos](http://www.reuzbl.org/wiki/howtos)
 
 From source
 -----------
 You can pull the code from git or get a tagged tarball.
 
-	$ git clone git://github.com/Dieterbe/uzbl.git
+	$ git clone git://github.com/Dieterbe/reuzbl.git
 	[ $ git checkout origin/experimental ] # optional. see below
-	$ cd uzbl
+	$ cd reuzbl
 	$ make
 	$ sudo make install
-If you want to remove uzbl again, you can issue:
+If you want to remove reuzbl again, you can issue:
 
 	$ make uninstall
 
-Tarballs can be pulled from [github.com/Dieterbe/uzbl/downloads](http://github.com/Dieterbe/uzbl/downloads)
+Tarballs can be pulled from [github.com/Dieterbe/reuzbl/downloads](http://github.com/Dieterbe/reuzbl/downloads)
 
 Though you can only get tagged versions from the master branch, which may be older then what you'll have through git.
 
@@ -49,26 +49,26 @@ File locations
 --------------
 After installing - using either method - you will find:
 
-* /usr/bin : uzbl
-* /usr/share/uzbl/docs/ : documentation files included with uzbl. (readme, checklist, .. )
-* /usr/share/uzbl/examples: sample scripts, config files and a sample data (boomarks, .. )
+* /usr/bin : reuzbl
+* /usr/share/reuzbl/docs/ : documentation files included with reuzbl. (readme, checklist, .. )
+* /usr/share/reuzbl/examples: sample scripts, config files and a sample data (boomarks, .. )
 
 You will probably want to change the scripts to behave more like you want, so copy the scripts to your home dir. If you save your config as
-$XDG\_CONFIG\_HOME/uzbl/config (this expands to ~/.config/uzbl/config on most systems) it will be recognized automatically. You can also pass the path to
+$XDG\_CONFIG\_HOME/reuzbl/config (this expands to ~/.config/reuzbl/config on most systems) it will be recognized automatically. You can also pass the path to
 the config file with the --config parameter.
 
 You're free to store your personal stuff where you want, but we think the [XDG basedir spec](http://standards.freedesktop.org/basedir-spec/basedir-spec-0.6.html)
 is very useful for keeping a clean home directory, so we recommend:
 
-* $XDG\_CONFIG\_HOME/uzbl/config* (~/.config/uzbl/config on most systems): config file
-* $XDG\_DATA\_HOME/uzbl (~/.local/share/uzbl on most systems): bookmarks file, history file. and "scripts" directory with scripts
+* $XDG\_CONFIG\_HOME/reuzbl/config* (~/.config/reuzbl/config on most systems): config file
+* $XDG\_DATA\_HOME/reuzbl (~/.local/share/reuzbl on most systems): bookmarks file, history file. and "scripts" directory with scripts
 
 Git Repo's & branches
 --------------------
 * Main official repo:
-  http://github.com/Dieterbe/uzbl
-- master -> uzbl stable branch
+  http://github.com/Dieterbe/reuzbl
+- master -> reuzbl stable branch
 - experimental -> bleeding edge stuff that may break. after QA Dieter merges into his master
 
-* Most contributors & developers also have their clones on github (http://github.com/dusanx, http://github.com/Barrucadu/uzbl, ...).
+* Most contributors & developers also have their clones on github (http://github.com/dusanx, http://github.com/Barrucadu/reuzbl, ...).
   They may be developing specific features, which get merged into Dieters experimental branch
